--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,8 +7,8 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$purple-color};
-  --global-hover-color: #{$purple-color};
+  --global-theme-color: #{$blue-lapis-color};
+  --global-hover-color: #{$blue-lapis-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
@@ -33,6 +33,7 @@
   .fa-sun {
     display: none;
   }
+
   .fa-moon {
     padding-left: 10px;
     padding-top: 12px;
@@ -42,6 +43,7 @@
   .repo-img-light {
     display: block;
   }
+
   .repo-img-dark {
     display: none;
   }
@@ -80,6 +82,7 @@ html[data-theme="dark"] {
     padding-top: 12px;
     display: block;
   }
+
   .fa-moon {
     display: none;
   }
@@ -87,6 +90,7 @@ html[data-theme="dark"] {
   .repo-img-light {
     display: none;
   }
+
   .repo-img-dark {
     display: block;
   }
